--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h2 class="text-3xl font-bold text-center text-slate-800">About Me</h2>
                 <p class="text-center mt-2 mb-12 text-slate-500 max-w-2xl mx-auto">This section provides a little more information about my current activities, interests, and how you can get in touch with me.</p>
                 <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-                    <img src="https://github.com/thatayaone-nkwe/thatayaone-nkwe.github.io/blob/main/thato.JPG" alt="A professional headshot of Thatayaone Nkwe" class="w-full max-w-sm mx-auto h-auto rounded-lg shadow-lg">
+                    <img src="https://raw.githubusercontent.com/thatayaone-nkwe/thatayaone-nkwe.github.io/blob/main/thato.JPG" alt="A professional headshot of Thatayaone Nkwe" class="w-full max-w-sm mx-auto h-auto rounded-lg shadow-lg">
                     <div class="space-y-6">
                         <div class="flex items-start space-x-4">
                             <span class="text-teal-500 text-2xl">🚀</span>
